--- a/templates/logapp/studentlogin.html
+++ b/templates/logapp/studentlogin.html
@@ -23,10 +23,10 @@
 
   <div class="login">
 <h1>Sign-in to Placement Buddy</h1>
-    <form class="" action="index.html" method="post">
+    <form class="" action="login" method="post">
         {% csrf_token %}
 
-      <input type="text" name="Email" value="" placeholder="Email">
+      <input type="text" name="Username" value="" placeholder="Username">
       <br>
       <input type="text" name="Password" value="" placeholder="Password">
       <br>
