--- a/templates/experience/expform.html
+++ b/templates/experience/expform.html
@@ -8,7 +8,7 @@
     <title>NITH Student Experience Form</title>
 
     <!-- Link to CSS Experience Form file -->
-    <link rel="stylesheet" href="css/Experience_Form.css">
+    <link rel="stylesheet" href="{% static 'css/Experience_Form.css' %}">
 </head>
 <body>
     <div>
