--- a/templates/logapp/studentlogin.html
+++ b/templates/logapp/studentlogin.html
@@ -28,7 +28,7 @@
 
       <input type="text" name="Username" value="" placeholder="Username">
       <br>
-      <input type="text" name="Password" value="" placeholder="Password">
+      <input type="password" name="Password" value="" placeholder="Password">
       <br>
       <input type="submit" name="submit" value="submit">
     </form>
