--- a/major/css/studentlogin.css
+++ b/major/css/studentlogin.css
@@ -1,14 +1,71 @@
+*{
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+
+}
 .discription{
 background-color: #A084CA;
 float: left;
 width: 40%;
-height: 783px;
+height: 100vh;
+text-align: center;
 }
+
+.welcome{
+  margin: 50px 50px 20px;
+  font-size: 60px;
+}
+
+.instruction{
+  margin: 20px 0;
+  font-size: 18px;
+}
+
+.guide{
+  margin: 150px 0 10px;
+}
+
+
+
 
 .login{
   background-color: #EBC7E8;
   float: right;
   width: 60%;
   height: 100vh;
-  
+  /* text-align: center; */
 }
+
+.signin{
+  text-align: center;
+  margin: 120px 0 0;
+}
+
+
+.login-box
+		{
+			height: 50%;
+			width: 30%;
+			border: 1px solid grey;
+			margin-left: 35%;
+			margin-top: 3%;
+			position: relative;
+      		box-shadow: 21px 12px 24px 10px rgba(0, 0, 0, .5);
+      		background: #dadada;
+		}
+		.login-header
+		{
+			text-align: center;
+			font-family: "vardhana",cursive;
+			font-size: 35px;
+			background: linear-gradient(to bottom, #00bfff 0%, #0000ff 100%);
+			color:#fff;
+			position: relative;
+      		box-shadow: 1px 3px 14px  rgba(0, 0, 0, .5);
+		}
+		.login-body
+		{
+			padding: 20px;
+			line-height: 2;
+		}
