update login and register page

--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -35,13 +35,12 @@
       <label for="check" class="checkbtn">
         <i class="fa fa-bars"></i>
       </label>
-      <label class="logo">NIT Hamirpur</label>
+      <label class="logo"><a href="#" style = "color : blue; text-decoration: none;">NIT Hamirpur</a></label>
       <ul>
         <li><a class="active" href="#">Home</a></li>
-        <li><a href="#">About NITH</a></li>
+        <li><a href="#link4">Why NITH</a></li>
         <li><a href = "#link1">Director's Message</a></li>
         <li><a href="#link2">Recruitment Process</a></li>
-        <li><a href="#">Statistics</a></li>
         <li><a href="#link3">Contact Us</a></li>
       </ul>
     </nav>
@@ -152,7 +151,7 @@
     <!-- ----------------- Placement Record Ends Here ------------ -->
 
     <!-- ----------------- Why NITH Starts Here ----------------- -->
-    <section class="why_nith">
+    <section class="why_nith" id = "link4">
       <div class="why_nith_box">
         <h3>Why NIT Hamirpur</h3>
         <div class="line"></div>
