--- a/templates/student/dashboard.html
+++ b/templates/student/dashboard.html
@@ -33,7 +33,7 @@
       <ul style="list-style: none;">
         <li class="item"><a href="#"  style="text-decoration: none; color : white"><i class="fas fa-home dash"></i> Homepage</a></li>
         <li class="item"><a href="#"  style="text-decoration: none; color : white"><i class="fa-solid fa-magnifying-glass dash"></i> Experience</a></li>
-        <li class="item"><a href="/experience/writeExperience"  style="text-decoration: none; color : white"><i class="fa-solid fa-pencil dash"></i> Post Experience</a></li>
+        <li class="item"><a href="/experience/writeExperience"  style="text-decoration: none;color : white" target="_blank"><i class="fa-solid fa-pencil dash"></i> Post Experience</a></li>
         <li class="item"><a href="#"  style="text-decoration: none; color : white"><i class="fa-sharp fa-solid fa-chart-simple dash"></i> Statistics</a></li>
         <li class="item"><a href="#"  style="text-decoration: none; color : white"><i class="fa-solid fa-book dash"></i> Resources</a></li>
         <li class="item"><a href="#"  style="text-decoration: none; color : white"><i class="fa-solid fa-wallet dash"></i> Drive</a></li>
