--- a/templates/logapp/login.html
+++ b/templates/logapp/login.html
@@ -25,7 +25,7 @@
                         <input id="pass" type="password" class="input" data-type="password" name = "Password">
                     </div>
                     <div class="foot-lnk">
-                        <a href="#forgot">Forgot Password?</a>
+                        <a href="/user/reset_password">Forgot Password?</a>
                     </div>
                     <div class="hr"></div>
                     <div class="group">
