--- a/static/css/login.css
+++ b/static/css/login.css
@@ -45,7 +45,7 @@ a {
     width: 81%;
     height: 83%;
     position: absolute;
-    padding: 70px 70px 50px 70px;
+    /* padding: 70px 70px 50px 70px; */
     background-color: black;
 }
 
